# triangular-solitaire

./: .gitignore  CMakeLists.txt  DeleteAnalysis.sh  README.md
dependencies/: CMakeLists.txt
dependencies/expected/: CMakeLists.txt
dependencies/gtest/: CMakeLists.txt
dependencies/spdlog/: CMakeLists.txt
src/: CMakeLists.txt  genetic_main.cpp
src/common/: distance_to_center.cpp  distance_to_center.h  heuristic.h  isolated_pegs.cpp  isolated_pegs.h  number_of_free_positions.h  number_of_new_moves.h
src/game/: CMakeLists.txt  board.cpp  game.cpp  main.cpp  move.cpp
src/game/includes/: bit_operations.h  board.h  board_error.h  move.h  peg.h  peg_position.h
src/genetic/: CMakeLists.txt  chromosome.cpp  eval.cpp  gen_alg_main.cpp  gene.cpp  geneticMain.cpp  genetic_alg.cpp
src/genetic/includes/: chromosome.h  eval.h  gene.h  genetic_alg.h  threading.h
src/greedy_dfs/: CMakeLists.txt  greedy_dfs_main.cpp  test.cpp
src/greedy_dfs/includes/: alg_node.h
src/gui-game/: CMakeLists.txt  game.cpp
tests/: CMakeLists.txt  board_test.cpp  eval_test.cpp  example.cpp  heuristics_test.cpp  move_test.cpp  test_gene.cpp
